lib_LIBRARIES = libkonkret.a

libkonkret_a_SOURCES = \
    defaultassoc.c \
    defaultei.c \
    defaultein.c \
    defaultgi.c \
    general.c \
    konkret.h \
    print.c \
    kstr.c

konkretincludedir = $(includedir)/konkret

konkretinclude_HEADERS = \
    konkret.h

konkretecmpiincludedir = $(includedir)/konkret/cmpi
