noinst_LIBRARIES = libkonkretmof.a

libkonkretmof_a_SOURCES = \
    MOF_Buffer.cpp \
    MOF_Buffer.h \
    MOF_Class_Decl.cpp \
    MOF_Class_Decl.h \
    MOF_Config.h \
    MOF_Data_Type.cpp \
    MOF_Data_Type.h \
    MOF_Date_Time.cpp \
    MOF_Date_Time.h \
    MOF_Element.cpp \
    MOF_Element.h \
    MOF_Error.cpp \
    MOF_Error.h \
    MOF_Feature.cpp \
    MOF_Feature.h \
    MOF_Feature_Info.cpp \
    MOF_Feature_Info.h \
    MOF_Flavor.cpp \
    MOF_Flavor.h \
    MOF_Indent.cpp \
    MOF_Indent.h \
    MOF_Instance_Decl.cpp \
    MOF_Instance_Decl.h \
    MOF_Key_Value_Pair.cpp \
    MOF_Key_Value_Pair.h \
    MOF_Lex.cpp \
    MOF_Lex_Utils.cpp \
    MOF_Lex_Utils.h \
    MOF_Literal.cpp \
    MOF_Literal.h \
    MOF_Method_Decl.cpp \
    MOF_Method_Decl.h \
    MOF_Named_Element.cpp \
    MOF_Named_Element.h \
    MOF_Object_Reference.cpp \
    MOF_Object_Reference.h \
    MOF_Options.cpp \
    MOF_Options.h \
    MOF_Parameter.cpp \
    MOF_Parameter.h \
    MOF_Parser.cpp \
    MOF_Parser.h \
    MOF_Pragma.cpp \
    MOF_Pragma.h \
    MOF_Property.cpp \
    MOF_Property_Decl.cpp \
    MOF_Property_Decl.h \
    MOF_Property.h \
    MOF_Qualified_Element.cpp \
    MOF_Qualified_Element.h \
    MOF_Qualifier.cpp \
    MOF_Qualifier_Decl.cpp \
    MOF_Qualifier_Decl.h \
    MOF_Qualifier.h \
    MOF_Qualifier_Info.cpp \
    MOF_Qualifier_Info.h \
    MOF_Reference_Decl.cpp \
    MOF_Reference_Decl.h \
    MOF_String.cpp \
    MOF_String.h \
    MOF_Types.h \
    MOF_Yacc.cpp \
    MOF_Yacc.h \
    REF_Lex.cpp \
    REF_Parser.cpp \
    REF_Parser.h \
    REF_Yacc.cpp \
    REF_Yacc.h

EXTRA_DIST = MOF.y REF.y MOF.l REF.l
